Fix sidebar link hover color on dark mode

--- a/site/src/component/SideBar/Sidebar.scss
+++ b/site/src/component/SideBar/Sidebar.scss
@@ -1,3 +1,13 @@
+[data-theme='dark'] {
+  .sidebar {
+    .sidebar-links {
+      ul li a:hover {
+        background-color: var(--overlay2);
+      }
+    }
+  }
+}
+
 .sidebar {
   position: fixed;
   width: 20vw;
